<resources>
    <string name="app_name">LinkArchive</string>
    <string name="content_description">This is image.</string>
    <string name="content_description_home">Home</string>
    <string name="content_description_library">Library</string>
    <string name="content_description_search">Search</string>
    <string name="link_hint">https://www.example.com</string>
    <string name="paste_hint">Paste From Clipboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="all_links">All Links</string>
    <string name="library">Library</string>
    <string name="bookmark">Bookmark</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="memo">Memo</string>
    <string name="cancel">cancel</string>
    <string name="create">create</string>
    <string name="create_link">Create Link</string>
    <string name="save">Save</string>
    <string name="memo_hint">Leave your Memo</string>
    <string name="add_link">Add Link</string>
    <string name="group">Group</string>
    <string name="link"> Link</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group name</string>
    <string name="new_group">New Group</string>
    <string name="https">https://</string>
    <string name="clipboard">Clipboard</string>
    <string name="paste_link">Paste Link</string>
    <string name="url_invalid">Invalid URL 😢</string>
    <string name="url_empty">Link Url is empty 😢</string>
    <string name="title_empty">Title is empty 😢</string>
    <string name="group_empty">Select your Group 😢</string>
    <string name="new_link">New link</string>
    <string name="edit_link">Edit Link</string>
    <string name="link_option">Link Option</string>
    <string name="group_option">Group Option</string>
    <string name="group_option_rename">Rename Group</string>
    <string name="group_option_delete">Delete Group</string>
    <string name="option_edit">Edit Link</string>
    <string name="option_delete">Delete Link</string>
    <string name="option_relocate">Relocate Link</string>
    <string name="relocate_logo">Select your group</string>
    <string name="empty_place_holder">"Oops! Nothing here!"</string>
</resources>