<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:orderInCategory="1"
        android:enabled="true"
        android:icon="@drawable/icon_home"/>

    <item
        android:id="@+id/libraryFragment"
        android:title="@string/library"
        android:orderInCategory="2"
        android:enabled="true"
        android:icon="@drawable/icon_library"/>


    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:orderInCategory="3"
        android:enabled="true"
        android:icon="@drawable/icon_search"/>

    <item
        android:id="@+id/settingFragment"
        android:title="@string/setting"
        android:orderInCategory="4"
        android:enabled="true"
        android:icon="@drawable/icon_setting"/>
</menu>