<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/dialog_background"
        android:padding="20dp"
        android:theme="@style/AppTheme"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/dialog_option_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_option"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dialog_option_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description"
            android:src="@drawable/outline_cancel_24"/>

        <View
            android:id="@+id/dialog_option_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#808080"
            app:layout_constraintTop_toBottomOf="@+id/dialog_option_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_option_view">

            <TextView
                android:id="@+id/dialog_option_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/option_edit"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dialog_option_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/option_delete"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dialog_option_relocate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/option_relocate"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
