<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/dialog_option_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_option"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dialog_option_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description"
            android:src="@drawable/outline_cancel_24"/>

        <View
            android:id="@+id/dialog_option_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#808080"
            app:layout_constraintTop_toBottomOf="@+id/dialog_option_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_option_view">

            <TextView
                android:id="@+id/dialog_option_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/group_option_delete"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dialog_option_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/group_option_rename"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
