<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.AddLinkActivity">

    <data>
        <import type="android.view.View"/>
        <variable
            name="webViewModel"
            type="com.chanyoung.jack.ui.viewmodel.networking.WebScraperViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:theme="@style/AppTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_link_const"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/add_link_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/add_link_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_link"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/add_link_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/add_link_sv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_link_const" />



        <ScrollView
            android:id="@+id/add_link_sv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_link_view">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/add_link_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/add_link_title_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="16dp">

                    <ImageView
                        android:id="@+id/add_link_thumbnail"
                        android:layout_width="300dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/link_place_holder"
                        android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/add_link_title_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/add_link_title_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_link_frame" />

                <EditText
                    android:id="@+id/add_link_title_input"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="no"
                    android:background="@drawable/edit_text_custom"
                    android:gravity="center_vertical"
                    android:hint="@string/title"
                    android:inputType="textUri"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_link_title_logo" />


                <TextView
                    android:id="@+id/add_link_url_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/link"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/add_link_url_frame"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_link_title_input" />

                <FrameLayout
                    android:id="@+id/add_link_url_frame"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_link_url_logo">

                    <EditText
                        android:id="@+id/add_link_url_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="no"
                        android:background="@drawable/edit_text_custom"
                        android:gravity="center_vertical"
                        android:hint="@string/link"
                        android:inputType="textUri"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="50dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/add_link_clipboard"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_clipboard"
                        android:contentDescription="@string/content_description"
                        android:layout_gravity="center_vertical |end"
                        android:layout_marginEnd="10dp"/>

                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/add_link_const2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_link_url_frame">

                    <TextView
                        android:id="@+id/add_link_rv_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/add_link_group_btn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/baseline_add_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/add_link_group_rv"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_link_const2" />

                <TextView
                    android:id="@+id/add_link_memo_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memo"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_link_group_rv" />

                <EditText
                    android:id="@+id/add_link_memo_input"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints="no"
                    android:background="@drawable/edit_text_custom"
                    android:gravity="top"
                    android:hint="@string/memo_hint"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/add_link_save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_link_memo_logo" />

                <Button
                    android:id="@+id/add_link_save"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/create_button"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>